<resources>
    <string name="app_name">BuuterKnige</string>
    <string name="enter">Log in</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_main">DC</string>
    <string name="preference">Preference</string>
    <string name="password">Password</string>
    <string name="c_password">Confirm Password</string>
    <string name="username">Email</string>
    <string name="create_an_account">Create an Account</string>
    <string name="joint">Join</string>
    <string name="unjoint">Unjoin</string>
    <string name="title_activity_map_tracking">Map</string>
    <string name="name">Name</string>
    <string name="register">Create new user</string>
    <string name="logIn">Log In</string>
    <string name="send_request">Send Request</string>
    <string name="request">request</string>
    <string name="request_type">request_type</string>
    <string name="received">received</string>
    <string name="friend_add_key">friend_add_key</string>
    <string name="decline_request">Decline request</string>


</resources>
