<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical">

    <RelativeLayout


        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/lbl_nameNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAllCaps="false"
                android:textColor="#d67601" />

            <EditText
                android:id="@+id/input_nameNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/lbl_emailNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textAllCaps="false"
                android:textColor="#d67601" />

            <EditText
                android:id="@+id/input_emailNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lbl_passwordNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAllCaps="false"
                android:textColor="#d67601" />

            <EditText
                android:id="@+id/input_passwordNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:password="true" />

            <TextView
                android:id="@+id/lbl_password1New"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c_password"
                android:textAllCaps="false"
                android:textColor="#d67601" />

            <EditText
                android:id="@+id/input_confirmPassNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:password="true" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:background="#d67601"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lbl_logIn"
                android:layout_width="61dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:clickable="true"
                android:text="@string/logIn"
                android:textAllCaps="false"
                android:textColor="#d67601" />

        </LinearLayout>
    </RelativeLayout>





</FrameLayout>