<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5fb0c9"
    android:orientation="vertical">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:gravity="center_horizontal"
        android:text="Account Login"
        android:textColor="#fff"
        android:textSize="26sp"
        android:textStyle="bold" />
    <RelativeLayout


        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <TextView
                android:id="@+id/lbl_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#d67601"
                android:textAllCaps="false" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lbl_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="#d67601"
        android:textAllCaps="false" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:password="true"
        />

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:background="#d67601"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/enter" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/lbl_account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".49"
                    android:gravity="center"
                    android:text="@string/create_an_account"
                    android:onClick="onClick"
                    android:textStyle="bold" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:background="#000" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".49"
                    android:gravity="center"
                    android:text="Lost Password"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
        </RelativeLayout>

    <EditText
        android:id="@+id/input_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/login_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/user_profile_image_background"
        android:elevation="4dp"
        android:src="@drawable/login1"/>

</RelativeLayout>